--- a/app/src/main/res/layout/activity_edr_primos.xml
+++ b/app/src/main/res/layout/activity_edr_primos.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginEnd="160dp"
-        android:text="Button"
+        android:text="Calcular Primos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
