--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="149dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="171dp"
-        android:text="Button"
+        android:text="Calcular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.379"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="160dp"
         android:layout_marginBottom="144dp"
-        android:text="Button"
+        android:text="Calcular Andoirx"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
